crates/vite_task_plan/tests/plan_snapshots/fixtures/nested-cache-override/snapshots/query - nested run without flags inherits parent cache.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
info:
  args:
    - run
    - outer-inherit
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/nested-cache-override
---
[
  {
    "key": [
      "<workspace>/",
      "outer-inherit"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/nested-cache-override",
        "task_name": "outer-inherit",
        "package_path": "<workspace>/"
      },
      "items": [
        {
          "execution_item_display": {
            "task_display": {
              "package_name": "@test/nested-cache-override",
              "task_name": "outer-inherit",
              "package_path": "<workspace>/"
            },
            "command": "vt run inner",
            "and_item_index": null,
            "cwd": "<workspace>/"
          },
          "kind": {
            "Expanded": [
              {
                "key": [
                  "<workspace>/",
                  "inner"
                ],
                "node": {
                  "task_display": {
                    "package_name": "@test/nested-cache-override",
                    "task_name": "inner",
                    "package_path": "<workspace>/"
                  },
                  "items": [
                    {
                      "execution_item_display": {
                        "task_display": {
                          "package_name": "@test/nested-cache-override",
                          "task_name": "inner",
                          "package_path": "<workspace>/"
                        },
                        "command": "vtt print-file package.json",
                        "and_item_index": null,
                        "cwd": "<workspace>/"
                      },
                      "kind": {
                        "Leaf": {
                          "Spawn": {
                            "cache_metadata": null,
                            "spawn_command": {
                              "program_path": "<tools>/vtt",
                              "args": [
                                "print-file",
                                "package.json"
                              ],
                              "all_envs": {
                                "NO_COLOR": "1",
                                "PATH": "<workspace>/node_modules/.bin:<tools>:<tools>"
                              },
                              "cwd": "<workspace>/"
                            }
                          }
                        }
                      }
                    }
                  ]
                },
                "neighbors": []
              }
            ]
          }
        }
      ]
    },
    "neighbors": []
  }
]
